Fix layout issues on News Page

--- a/src/client/site/common/twitter/twitter.scss
+++ b/src/client/site/common/twitter/twitter.scss
@@ -26,6 +26,7 @@
 
         display: flex;
         flex-direction: column;
+        align-items: center;
 
         .instructions {
             flex: 1 1 50%;
